--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/soapmactavish23/algashop-docs
 [submodule "microservices/billing"]
 	path = microservices/billing
-	url = https://github.com/soapmactavish23/billing
+	url = git@https://github.com/soapmactavish23/billing.git
 [submodule "microservices/product-catalog"]
 	path = microservices/product-catalog
 	url = git@https://github.com/soapmactavish23/product-catalog.git
