--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "microservices/product-catalog"]
 	path = microservices/product-catalog
 	url = git@https://github.com/soapmactavish23/product-catalog.git
+[submodule "microservices/billing"]
+	path = microservices/billing
+	url = git@github.com:soapmactavish23/billing.git
