--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,28 @@
 services:
-  rapidexapi:
+  wiremock:
     image: wiremock/wiremock:3x
     ports:
       - "8780:8080"
     volumes:
       - ./etc/wiremock:/home/wiremock/mappings
     command: --verbose --disable-http2-plain
+  algashop-postgres:
+    image: postgres:17-alpine
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: postgres
+    volumes:
+      - algashop-postgres:/var/lib/postgresql/data
+      - ./etc/postgres/init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
+    healthcheck:
+      test: pg_isready -U postgres -d postgres
+      interval: 30s
+      timeout: 10s
+      retries: 3
+volumes:
+  algashop-postgres:
